Fix Dark Mode

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -194,9 +194,7 @@ body {
       &:first-child {
         background-color: $secondary-dark;
 
-        label,
-        span,
-        a {
+        * {
           background-color: $secondary-dark;
         }
       }
